--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     -->
     <title>Mesto</title>
   </head>
-  <body class="root">
+  <body class="page">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
